--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria</title>
-    <link rel="StyleSheet" href="css/main.css" type="text/css">
+    <link rel="StyleSheet" href="css/maina.css" type="text/css">
 
 </head>
 <body>
@@ -20,12 +20,14 @@
         </nav>
         <hr>
     </header>
-    
-    <hr>
-    <footer>
-        <p>Encuentranos en:</p>
-        <p>Dirección: Unidad habitacional Rinconada de acolapa, plaza de la piramide <br>
-            Telefono: 55 12345678 <br>
+    <section>
+
+    </section>
+        <hr>
+        <footer>
+            <p>Encuentranos en:</p>
+            <p>Dirección: Unidad habitacional Rinconada de acolapa, plaza de la piramide <br>
+                Telefono: 55 12345678 <br>
             Horarios de atención: 9:00 - 18:00
         </p>
     </footer>
