finalizados los primeros diseños de visualizacion en pagina cliente y pedidos

--- a/cliente.html
+++ b/cliente.html
@@ -76,7 +76,7 @@
                             <label for="sabor5">Sabor 5</label>
                         </div>
                         <img src="/img/sabor5.png" alt="sabor 5" class="imgCard">
-                        <p>Well, I figured, what the hell. Yeah man, that was good. Let's do another one. Right. Re-elect Mayor Goldie Wilson. Progress is his middle name. C'mon.</p>
+                        <p>Well yeah, you know we have two of them. Uh, well, I haven't finished those up yet, but you know I figured since they weren't due till- C'mon, more, dammit. Jeez. Holy shit. Let's see if you bastards can do ninety. I had a horrible nightmare, dreamed I went back in time, it was terrible. Yoo.</p>
                         <p class="precio">$170</p>
                     </div>
                     <div class="card">
@@ -85,7 +85,7 @@
                             <label for="sabor6">Sabor 6</label>
                         </div>
                         <img src="/img/sabor6.png" alt="sabor 6" class="imgCard">
-                        <p>Well, I figured, what the hell. Yeah man, that was good. Let's do another one. Right. Re-elect Mayor Goldie Wilson. Progress is his middle name. C'mon.</p>
+                        <p>C'mon. Just relax now Calvin, you've got a big bruise on you're head. Uh, coast guard. Hey George, buddy, hey, I've been looking all over for you. You remember me, the guy who saved your life the other day. Well, she's not doing a very good job.</p>
                         <p class="precio">$140</p>
                     </div>
                     <div class="card">
@@ -94,7 +94,7 @@
                             <label for="sabor7">Sabor 7</label>
                         </div>
                         <img src="/img/sabor7.png" alt="sabor 7" class="imgCard">
-                        <p>Well, I figured, what the hell. Yeah man, that was good. Let's do another one. Right. Re-elect Mayor Goldie Wilson. Progress is his middle name. C'mon.</p>
+                        <p>Wrecked? You bet. Say, why do you let those boys push you around like that? Give me a hand, Lorenzo. Ow, dammit, man, I sliced my hand. There's that word again, heavy. Why are things so heavy in the future. Is there a problem with the Earth's gravitational pull?</p>
                         <p class="precio">$175</p>
                     </div>
                     <div class="card">
@@ -103,7 +103,7 @@
                             <label for="sabor8">Sabor 8</label>
                         </div>
                         <img src="/img/sabor8.png" alt="sabor 8" class="imgCard">
-                        <p>Well, I figured, what the hell. Yeah man, that was good. Let's do another one. Right. Re-elect Mayor Goldie Wilson. Progress is his middle name. C'mon.</p>
+                        <p>Right. Don't worry. As long as you hit that wire with the connecting hook at precisely 88 miles per hour, the instance the lightning strikes the tower, everything will be fine. That's good advice, Marty. Yeah, alright, bye-bye. What? Will you take care of that?</p>
                         <p class="precio">$180</p>
                     </div>
                     <div class="card">
